[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "moomoo-ingest"
dynamic = ["version"]
dependencies = [
    "psycopg[binary]==3.1.*",
    "sqlalchemy==2.0.*",
    "pgvector==0.1.*",
    "requests==2.*",
    "tqdm==4.65.*",
    "click==8.1.*",
    "tenacity==8.2.2",
    "mutagen==1.46.0",
    "liblistenbrainz==0.6.1",
    "musicbrainzngs==0.7.1",
    "beautifulsoup4==4.13.3",
    "zstandard==0.23.0",
    "implicit==0.7.2",
    "numpy==1.26.1",
    "pandas==2.3.0",
]

[project.optional-dependencies]
test = [
    "ruff==0.7.*",
    "pytest==7.2.2",
    "requests-mock==1.11.0",
    "pytest-postgresql==5.0.0",
    "pytest_localftpserver==1.3.*",
]

[project.scripts]
moomoo-ingest = "moomoo_ingest.cli:cli"

[tool.setuptools.dynamic]
version = {file = "src/moomoo_ingest/version"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
moomoo_ingest = ["version"]

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py", "scripts/**/*.py"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "RUF",  # ruff
]
ignore = [
    "B017", # `pytest.raises(Exception)` should be considered evil.
    "E731", # rewrite lambda assignments as def
]