[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "moomoo-ingest"
dynamic = ["version"]
dependencies = [
    "psycopg[binary]==3.3.*",
    "sqlalchemy==2.*",
    "pgvector==0.4.*",
    "requests==2.*",
    "tqdm==4.68.*",
    "click==8.4.*",
    "tenacity==9.1.*",
    "mutagen==1.47.0",
    "liblistenbrainz==0.7.0",
    "musicbrainzngs==0.7.1",
    "zstandard==0.25.0", # TODO: replace with stdlib bindings!
    "implicit==0.7.3",
    "numpy==2.4.6",
    "pandas==3.0.3",
]

[project.optional-dependencies]
test = [
    "ruff==0.15.*",
    "pytest==9.0.*",
    "requests-mock==1.12.*",
    "pytest-postgresql==8.1.*",
    "pytest_localftpserver==1.5.*",
]

[project.scripts]
moomoo-ingest = "moomoo_ingest.cli:cli"

[tool.setuptools.dynamic]
version = {file = "src/moomoo_ingest/version"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
moomoo_ingest = ["version"]

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py", "scripts/**/*.py"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "RUF",  # ruff
]
ignore = [
    "B017", # `pytest.raises(Exception)` should be considered evil.
    "E731", # rewrite lambda assignments as def
]