[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "moomoo-pg"
dynamic = ["version"]
# keep the deps really loose, since this is to be re used in other libs
dependencies = [
    "psycopg[binary]==3.*",
    "sqlalchemy==2.*",
    "pgvector==0.*",
]

[project.optional-dependencies]
cli = [
    "click>6,<9",
]
test = [
    "ruff==0.15.*",
    "pytest==9.*",
    "pytest-postgresql==8.*",
]

[tool.setuptools.dynamic]
version = {file = "src/moomoo_pg/version"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
moomoo_pg = ["version"]

[tool.pytest.ini_options]
addopts = ["--verbose"]
testpaths = ["tests"]

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "RUF", # ruff
]
ignore = []
