[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "moomoo-playlist"
dynamic = ["version"]
dependencies = [
    "psycopg[binary]==3.*",
    "sqlalchemy==2.*",
    "pgvector==0.4.*",
    "click==8.*",
    "tenacity==9.*",
    "tqdm==4.*",
    "scikit-learn==1.*",
    "structlog>21.0.0,<27.0.0",
    "numpy==2.*",
    "pandas==2.*",
    "moomoo-pg @ git+https://github.com/nolanbconaway/moomoo.git@pg-v0.1.1#subdirectory=pg",

]

[project.optional-dependencies]
test = [
    "ruff==0.15.*",
    "pytest==9.*",
    "pytest-postgresql==8.*", # last version supporting postgres 13, which i run locally.
]

[project.scripts]
moomoo-playlist = "moomoo_playlist.cli:cli"

[tool.setuptools.dynamic]
version = {file = "src/moomoo_playlist/version"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
moomoo_playlist = ["version"]

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "RUF", # ruff
]
ignore = []
